--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>英文精讲助手 - AI智能英语学习工具</title>
+    <title>English Tutor</title>
   </head>
   <body>
     <div id="root"></div>
